--- a/public/html/header.phtml
+++ b/public/html/header.phtml
@@ -1,5 +1,5 @@
 <div class="logo">
-    <a href="index.php"><img src=<?php echo $cssRePath . "public/image/logo.png"?> alt="logo" /></a>
+    <a href="/18120418_Football/index.php"><img src=<?php echo $cssRePath . "public/image/logo.png"?> alt="logo" /></a>
     <p>Football Management Website</p>
 </div>
 <div class="menu">
@@ -10,10 +10,10 @@
             <div></div>
         </button>
         <div id="myDropdown" class="dropdown-content">
-            <a href="/18120418_Football/components/getAllPlayer.php">1</a>
+            <a href="/18120418_Football/components/getAllPlayerClub.php">1</a>
             <a href="/18120418_Football/components/getAllClub.php">2</a>
-            <a href="/18120418_Football/components/">3</a>
-            <a href="/18120418_Football/components/">4</a>
+            <a href="/18120418_Football/components/getAllPlayerClub.php">3</a>
+            <a href="/18120418_Football/components/getAllPlayerClub.php">4</a>
             <a href="/18120418_Football/components/">5</a>
             <a href="/18120418_Football/components/">6</a>
             <a href="/18120418_Football/components/">7</a>
