--- a/template/testFooterWithContent.phtml
+++ b/template/testFooterWithContent.phtml
@@ -1,11 +1,11 @@
 <h3>Which is the task you would like to choose!</h3>
 <ol>
-    <li><a href="./components/getAllPlayer.php">Hiển thị danh sách cầu thủ (theo từng câu lạc bộ / toàn bộ).</a></li>
+    <li><a href="./components/getAllPlayerClub.php">Hiển thị danh sách cầu thủ (theo từng câu lạc bộ / toàn bộ).</a></li>
 
-    <li><a href="">Hiển thị danh sách câu lạc bộ. Lưu ý: có chức năng liên kết đến các chức năng:
+    <li><a href="./components/getAllClub.php">Hiển thị danh sách câu lạc bộ. Lưu ý: có chức năng liên kết đến các chức năng:
 xem danh sách cầu thủ của câu lạc bộ đó.</a></li>
-    <li><a href="">Tìm kiếm cầu thủ theo từ khoá</a></li>
-    <li><a href="">Tìm kiếm cầu thủ nâng cao: theo một hoặc nhiều tiêu chí: tên, số áo, quốc tịch, …
+    <li><a href="./components/getAllPlayerClub.php">Tìm kiếm cầu thủ theo từ khoá</a></li>
+    <li><a href="./components/getAllPlayerClub.php">Tìm kiếm cầu thủ nâng cao: theo một hoặc nhiều tiêu chí: tên, số áo, quốc tịch, …
 (/3 và 4/ chung 1 trang)</a></li>
     <li><a href="">Thêm một cầu thủ mới (Lưu ý khi thêm cầu thủ là chọn câu lạc bộ từ combobox)</a></li>
     <li><a href="">Thêm một câu lạc bộ mới</a></li>
