--- a/view/getListPlayer.phtml
+++ b/view/getListPlayer.phtml
@@ -5,6 +5,12 @@
         top: 100px;
         right: -400px;
     }
+    .searchPlayerInput{
+        display: flex;
+        position: relative;
+        top: 50px;
+        right: -400px;
+    }    
 </style>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -22,13 +28,12 @@
     });
 });</script>
 
-<div class="redirectPlayerPosition">
-    <a href="./getAllPlayerClub.php">Redirect to all player of each club!</a>
-</div>
-
-<div>
+<div class="searchPlayerInput">
     <input type="text" name="keySearch" placeholder="Search player" id="inputSearchPlayer" />
     <input type="button" value="Search" id="searchPlayer" />
+</div>
+<div class="redirectPlayerPosition">
+    <a href="./getAllPlayerClub.php">Redirect to all player of each club!</a>
 </div>
 
 <div id="searchPlayerTable">
