--- a/view/getListPlayerClub.phtml
+++ b/view/getListPlayerClub.phtml
@@ -1,64 +1,169 @@
 <style>
-    .redirectPlayerPosition {
+    .positionAtRight {
         display: flex;
         position: relative;
-        top: 100px;
-        right: -400px;
+        flex-direction: column;
+        border: 2px solid rgb(101, 184, 220);
+        padding: 10px;
+        margin: 10px;
+        height: fit-content;
+    }
+
+    .stylePlayerClub {
+        display: flex;
+        position: relative;
+        height: fit-content;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    table.searchPlayerTableInput,
+    table.searchPlayerTableInput th,
+    table.searchPlayerTableInput td,
+    table.searchPlayerTableInput tr {
+        border: 0;
+    }
+
+    .searchPlayerInput {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .alignAdvancedSearchButton {
+        text-align: end;
+    }
+
+    .advancedSearch {
+        border: 2px solid rgb(131, 188, 237);
+        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border-radius: 2px;
+    }
+    #searchPlayerTable{
+        border: 2px solid rgb(131, 188, 237);
+        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border-radius: 2px;
     }
 </style>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>$(document).ready(function(){
-    $('#searchPlayer').click(function(){
-        let keySearch = encodeURI($('#inputSearchPlayer').val());
-        let url = 'http://localhost/18120418_Football/components/getAllPlayerClub.php?action=searchPlayer&keySearch=' + keySearch;
-        $.ajax({
-            url: url,
-            type: 'GET',
-            success: function(data){
-                $('#searchPlayerTable').html(data);
-            }
+<script>
+    $(document).ready(function () {
+        $('#searchPlayer').click(function () {
+            let keySearch = encodeURI($('#inputSearchPlayer').val());
+            let url = 'http://localhost/18120418_Football/components/getAllPlayerClub.php?action=searchPlayer&keySearch=' + keySearch;
+            $.ajax({
+                url: url,
+                type: 'GET',
+                success: function (data) {
+                    $('#searchPlayerTable').html(data);
+                }
+            });
         });
     });
-});</script>
 
+    $(document).ready(function () {
+        $('#advancedSearchButton').click(function () {
+            let playerName = encodeURI($('#playerNameInput').val());
+            let playerPosition = encodeURI($('#playerPositionInput').val());
+            let playerClub = encodeURI($('#playerClubInput').val());
+            let playerNumber = encodeURI($('#playerNumberInput').val());
+            let playerNationality = encodeURI($('#playerNationalityInput').val());
+            let url = 'http://localhost/18120418_Football/components/getAllPlayerClub.php?action=searchPlayerAdvanced';
+            let data = {
+                playerName,
+                playerPosition,
+                playerClub,
+                playerNumber,
+                playerNationality
+            };
+            $.ajax({
+                url,
+                type: 'GET',
+                data,
+                async: true,
+                success: function (data) {
+                    $('#searchPlayerTable').html(data);
+                }
+            });
+        });
+    });
+</script>
 
-<div class="redirectPlayerPosition">
-    <a href="./getAllPlayer.php">Redirect to get all player!</a>
-</div>
+<div class="stylePlayerClub">
+    <div class="positionAtRight">
+        <div class="searchPlayerInput">
+            <input type="text" name="keySearch" placeholder="Search player" id="inputSearchPlayer" />
+            <input type="button" value="Search" id="searchPlayer" />
+        </div>
 
-<div>
-    <input type="text" name="keySearch" placeholder="Search player" id="inputSearchPlayer" />
-    <input type="button" value="Search" id="searchPlayer" />
-</div>
+        <div class="advancedSearch">
+            <table class="searchPlayerTableInput">
+                <caption>Advanced Search</caption>
+                <tr>
+                    <th>Name:</th>
+                    <td><input type="text" id="playerNameInput"></td>
+                </tr>
+                <tr>
+                    <th>Position:</th>
+                    <td><input type="text" id="playerPositionInput"></td>
+                </tr>
+                <tr>
+                    <th>Club:</th>
+                    <td><input type="text" id="playerClubInput"></td>
+                </tr>
+                <tr>
+                    <th>Number:</th>
+                    <td><input type="text" id="playerNumberInput"></td>
+                </tr>
+                <tr>
+                    <th>Nationality:</th>
+                    <td><input type="text" id="playerNationalityInput"></td>
+                </tr>
+                <tr>
+                    <th></th>
+                    <td class="alignAdvancedSearchButton"><input type="button" value="Advanced Search"
+                            id="advancedSearchButton"></td>
+                </tr>
+            </table>
+        </div>
 
-<div id="searchPlayerTable">
-    <table>
-        <tr>
-            <th>Full Name</th>
-            <th>Position</th>
-            <th>Number</th>
-            <th>Nationality</th>
-            <th>Club</th>
-        </tr>
-        <?php foreach ($listAllPlayer as $player): ?>
-        <tr>
-            <td>
-                <?= $player->FullName ?>
-            </td>
-            <td>
-                <?= $player->Position ?>
-            </td>
-            <td>
-                <?= $player->Number ?>
-            </td>
-            <td>
-                <?= $player->Nationality ?>
-            </td>
-            <td>
-                <?= $player->ClubName?>
-            </td>
-        </tr>
-        <?php endforeach; ?>
-    </table>
+        <div class="redirectPlayerPosition">
+            <a href="./getAllPlayer.php">Redirect to get all player!</a>
+        </div>
+    </div>
+
+    <div id="searchPlayerTable">
+        <table>
+            <tr>
+                <th>Full Name</th>
+                <th>Position</th>
+                <th>Number</th>
+                <th>Nationality</th>
+                <th>Club</th>
+            </tr>
+            <?php foreach ($listAllPlayer as $player): ?>
+            <tr>
+                <td>
+                    <?= $player->FullName ?>
+                </td>
+                <td>
+                    <?= $player->Position ?>
+                </td>
+                <td>
+                    <?= $player->Number ?>
+                </td>
+                <td>
+                    <?= $player->Nationality ?>
+                </td>
+                <td>
+                    <?= $player->ClubName?>
+                </td>
+            </tr>
+            <?php endforeach; ?>
+        </table>
+    </div>
 </div>
