--- a/public/html/header.phtml
+++ b/public/html/header.phtml
@@ -14,11 +14,11 @@
             <a href="/18120418_Football/components/getAllClub.php">2</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">3</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">4</a>
-            <a href="/18120418_Football/components/">5</a>
+            <a href="/18120418_Football/components/addModifyPlayer.php">5</a>
             <a href="/18120418_Football/components/">6</a>
             <a href="/18120418_Football/components/">7</a>
-            <a href="/18120418_Football/components/">8</a>
-            <a href="/18120418_Football/components/">9</a>
+            <a href="/18120418_Football/components/getAllPlayerClub.php">8</a>
+            <a href="/18120418_Football/components/getAllPlayerClub.php">9</a>
             <a href="/18120418_Football/components/">10</a>
             <a href="/18120418_Football/components/">11</a>
         </div>
