--- a/template/testFooterWithContent.phtml
+++ b/template/testFooterWithContent.phtml
@@ -7,11 +7,11 @@ xem danh sách cầu thủ của câu lạc bộ đó.</a></li>
     <li><a href="./components/getAllPlayerClub.php">Tìm kiếm cầu thủ theo từ khoá</a></li>
     <li><a href="./components/getAllPlayerClub.php">Tìm kiếm cầu thủ nâng cao: theo một hoặc nhiều tiêu chí: tên, số áo, quốc tịch, …
 (/3 và 4/ chung 1 trang)</a></li>
-    <li><a href="">Thêm một cầu thủ mới (Lưu ý khi thêm cầu thủ là chọn câu lạc bộ từ combobox)</a></li>
+    <li><a href="./components/addModifyPlayer.php">Thêm một cầu thủ mới (Lưu ý khi thêm cầu thủ là chọn câu lạc bộ từ combobox)</a></li>
     <li><a href="">Thêm một câu lạc bộ mới</a></li>
     <li><a href="">Cập nhật thông tin câu lạc bộ (Bằng cách chọn câu lạc bộ ở trang 2/)</a></li>
-    <li><a href="">Cập nhật thông tin cầu thủ (Bằng cách chọn cầu thủ ở trang 1/ hoặc 3/ . 4/.)</a></li>
-    <li><a href="">Xóa cầu thủ (xóa trong danh sách bằng cách xóa từng cầu thủ hoặc xoá những
+    <li><a href="./components/getAllPlayerClub.php">Cập nhật thông tin cầu thủ (Bằng cách chọn cầu thủ ở trang 1/ hoặc 3/ . 4/.)</a></li>
+    <li><a href="./components/getAllPlayerClub.php">Xóa cầu thủ (xóa trong danh sách bằng cách xóa từng cầu thủ hoặc xoá những
 cầu thủ được chọn bằng checkbox ở trang 1/ 3/ 4/)</a></li>
     <li><a href="">Đăng nhập / Đăng xuất (Tạo thêm bảng USER(userid, name, password, status)</a></li>
     <li><a href="">Giới thiệu (Liên kết tới trang BT01.pptx)</a></li>
