--- a/public/html/header.phtml
+++ b/public/html/header.phtml
@@ -15,8 +15,8 @@
             <a href="/18120418_Football/components/getAllPlayerClub.php">3</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">4</a>
             <a href="/18120418_Football/components/addModifyPlayer.php">5</a>
-            <a href="/18120418_Football/components/">6</a>
-            <a href="/18120418_Football/components/">7</a>
+            <a href="/18120418_Football/components/getAllClub.php">6</a>
+            <a href="/18120418_Football/components/getAllClub.php">7</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">8</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">9</a>
             <a href="/18120418_Football/components/">10</a>
