--- a/template/testFooterWithContent.phtml
+++ b/template/testFooterWithContent.phtml
@@ -14,6 +14,6 @@ xem danh sách cầu thủ của câu lạc bộ đó.</a></li>
     <li><a href="./components/getAllPlayerClub.php">Xóa cầu thủ (xóa trong danh sách bằng cách xóa từng cầu thủ hoặc xoá những
 cầu thủ được chọn bằng checkbox ở trang 1/ 3/ 4/)</a></li>
     <li><a href="">Đăng nhập / Đăng xuất (Tạo thêm bảng USER(userid, name, password, status)</a></li>
-    <li><a href="">Giới thiệu (Liên kết tới trang BT01.pptx)</a></li>
+    <li><a href="./18120418_cv_html_css/index.html">Giới thiệu (Liên kết tới trang BT01.pptx)</a></li>
 </ol>
 <img src="public/image/logo.png" alt="">
