--- a/view/getListClub.phtml
+++ b/view/getListClub.phtml
@@ -127,7 +127,7 @@
     </div>
 
     <div>
-        <form action="club.php?action=add" method="post" class="alignAddPlayerForm">
+        <form action="club.php?action=add" method="POST" class="alignAddPlayerForm">
             <div>
                 <label>CLub Name:</label>
                 <input type="text" name="clubName" />
@@ -138,7 +138,7 @@
             </div>
             <div>
                 <label>Stadium ID(Click to change to ID):</label>
-                <input type="text" name="playerClubID" list="club-stadiumid">
+                <input type="text" name="clubStadiumID" list="club-stadiumid">
                 <datalist name="clubStadiumID" id="club-stadiumid">
                     <?php
                         foreach ($listAllClub as $club) {
@@ -149,7 +149,7 @@
             </div>
             <div>
                 <label>Coach ID(Click to change to ID):</label>
-                <input type="text" name="playerClubID" list="club-coachid">
+                <input type="text" name="clubCoachID" list="club-coachid">
                 <datalist name="clubCoachID" id="club-coachid">
                     <?php
                         foreach ($listAllClub as $club) {
