only the pagination function  remain

--- a/public/html/header.phtml
+++ b/public/html/header.phtml
@@ -10,6 +10,7 @@
             <div></div>
         </button>
         <div id="myDropdown" class="dropdown-content">
+            <a href="/18120418_Football/index.php">0</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">1</a>
             <a href="/18120418_Football/components/getAllClub.php">2</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">3</a>
@@ -19,15 +20,15 @@
             <a href="/18120418_Football/components/getAllClub.php">7</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">8</a>
             <a href="/18120418_Football/components/getAllPlayerClub.php">9</a>
-            <a href="/18120418_Football/components/">10</a>
+            <a href="/18120418_Football/components/loginout.php">10</a>
             <a href="/18120418_Football/18120418_cv_html_css/index.html">11</a>
         </div>
     </div>
     <ul>
-        <li><a href="index.php">Home</a></li>
-        <li><a href="about.php">About</a></li>
-        <li><a href="contact.php">Contact</a></li>
-        <li><a href="login.php">Login</a></li>
+        <li><a href="/18120418_Football/index.php">Home</a></li>
+        <li><a href="/18120418_Football/18120418_cv_html_css/">About</a></li>
+        <li><a href="/18120418_Football/components/loginout.php">Login</a></li>
+        <li><a href="/18120418_Football/components/loginout.php?action=logout">Logout</a></li>
     </ul>
 </div>
 <script>
